--- a/app/src/main/res/layout/adapter_search_drugs.xml
+++ b/app/src/main/res/layout/adapter_search_drugs.xml
@@ -8,16 +8,34 @@
     android:layout_height="wrap_content"
     android:background="@drawable/design_border_grey"
     android:layout_margin="4dp"
+    android:id="@+id/drugWrapper"
     android:gravity="center_vertical"
-    android:padding="6dp">
-    <TextView
+    android:padding="6dp"
+    android:baselineAligned="false">
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:layout_weight="1"
-        android:textColor="@color/colorDarkBlue"
-        android:text="Paracetamol"/>
+        android:orientation="vertical"
+        android:layout_weight="1">
+        <TextView
+            android:id="@+id/drugName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:textColor="@color/colorDarkBlue"
+            android:text="Paracetamol"/>
+        <TextView
+            android:id="@+id/drugDesc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textStyle="italic"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:text="Relieves headache and every form of wahala"/>
+    </LinearLayout>
     <LinearLayout
+        android:id="@+id/drugRemoveFromCartBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="4dp"
@@ -39,6 +57,7 @@
             android:text="Remove"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/drugAddToCartBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="4dp"
